# iris-agent

./: .gitignore  .worktreeinclude  AGENTS.md  BUGS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  DESIGN_NOTES.md  NOTICE  PRODUCT.md  README.md  SECURITY.md  TUI_POLISH_SHOWCASE_PROMPT.md  build.rs  collected-system-prompts-optimized.md  collected-system-prompts.md  deny.toml  implementation-notes.html  install.sh  release-plz.toml  scratch.txt  typos.toml
.claude/skills/: compaction-tuning  documentation-codemap-specialist  iris-release  provider-stream-diagnostics  token-efficiency-benchmark  write-documentation
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: cargo-deny.yml  ci.yml  codeql.yml  dependabot-auto-merge.yml  dependency-review.yml  labeler.yml  lint.yml  pr-title.yml  release-plz.yml  release.yml
.pi/skills/: iris-tui
crates/iris-subagent-runtime/: Cargo.toml  README.md
crates/iris-subagent-runtime/examples/: standalone.rs
crates/iris-subagent-runtime/src/: artifact.rs  error.rs  executor.rs  id.rs  lib.rs  model.rs  orchestration.rs  persistence.rs  runtime.rs
crates/iris-subagent-runtime/src/worktree/: apply.rs  mod.rs  process.rs  registry.rs  restore.rs  service.rs  types.rs
crates/iris-subagent-runtime/tests/: apply.rs  restore.rs  runtime.rs  worktree.rs
docs/: ARCHITECTURE.md  BENCHMARK_PLAN.md  COMPETITOR_ANALYSIS.md  COMPETITOR_MATRIX.md  FEATURES.md  IRIS_TUI_OUTPUT_RENDERING_SPEC.md  MODULARIZATION.md  NAMING.md  OPENWIKI.md  PITCH.md  PI_MONO_TUI_MODEL_PROVIDER_LOGIN_SPEC.md  RELEASING.md  ROADMAP.md  TUI_DESIGN_LANGUAGE.md  TUI_LIVE_TESTING.md  auto-compaction-implementation-notebook.md
docs/CODEMAPS/: INDEX.md
docs/adr/: 0001-keep-nexus-wayland-iris-as-in-crate-tiers.md  0002-use-tokio-async-streaming-and-cancellation-in-nexus.md  0003-keep-provider-adapters-and-auth-in-mimir.md  0004-build-jsonl-session-store-foundation-before-resume-compaction.md  0005-nexus-owns-tool-approval-and-execution-policy.md  0006-use-stable-ratatui-crossterm-and-selectively-borrow-codex-tui-patterns.md  0007-use-native-trusted-tools-with-read-before-mutate-safety.md  0008-harden-bash-with-process-groups-persistent-sessions-and-landlock.md  0009-persist-compaction-as-a-session-entry-and-rebuild-context-through-the-summary.md  0010-mutating-and-effectful-tools-opt-out-of-persistent-allow-always.md  0011-store-oversized-tool-outputs-behind-session-scoped-handles.md  0012-harness-owned-fragment-slot-system-prompt-assembly.md  0013-shared-selector-schema-for-dynamic-prompt-and-tool-assembly.md  0014-tool-visibility-is-not-authorization.md  0015-assign-fragments-to-config-defined-named-slots.md  0016-preserve-provider-reasoning-continuity-in-flattened-transcripts.md  0017-centralize-model-selection-and-switch-at-turn-boundaries.md  0019-formalize-correlation-ids.md  0020-expand-typed-runtime-events.md  0021-structured-tool-result-contracts.md  0022-project-tool-declarations-per-provider-and-prefer-native-tools.md  0022-use-default-off-provider-native-cache-and-context-management.md  0022-use-default-short-provider-native-cache-and-context-management.md  0023-project-tool-declarations-per-provider-and-prefer-native-tools.md  0024-expose-stored-reasoning-as-a-display-event.md  0024-introduce-tui-component-container-overlay-focus-abstraction.md  0025-expose-stored-reasoning-as-a-display-event.md  0026-make-system-prompt-fragments-fully-internal.md  0026-token-efficient-model-switching-and-provider-summaries.md  (+52 more)
iris-bench/: CHANGELOG.md  Cargo.toml
iris-bench/fixtures/probe_find/: README.txt
iris-bench/fixtures/probe_grep/crates/payments-core/src/: lib.rs.txt
iris-bench/fixtures/probe_grep/crates/payments-core/src/gateway/: retry_policy.rs.txt
iris-bench/fixtures/workload1_fix_test/: lib.rs.txt  tokenizer.rs.txt
iris-bench/fixtures/workload2_rename/config/: retry.rs.txt
iris-bench/fixtures/workload2_rename/net/: client.rs.txt  pool.rs.txt
iris-bench/fixtures/workload3_log_triage/logs/: shard-02.log.txt  shard-03.log.txt  shard-04.log.txt
iris-bench/fixtures/workload4_bash_diagnose/: Cargo.toml.txt
iris-bench/fixtures/workload5_chained_provider_fix/: Cargo.toml.txt
iris-bench/fixtures/workload5_chained_provider_fix/src/: lib.rs.txt  reasoning.rs.txt
iris-bench/fixtures/workload5_chained_provider_fix/src/providers/: anthropic_messages.rs.txt  antigravity.rs.txt  mod.rs.txt  openai_codex_responses.rs.txt  openai_compatible_chat.rs.txt
iris-bench/fixtures/workload5_chained_provider_fix/tests/: live_reasoning_summary.rs.txt
iris-bench/src/: analysis.rs  cli.rs  engine.rs  event.rs  fixtures.rs  lib.rs  main.rs  record.rs  report.rs  spec.rs  style.rs  tui.rs  workloads.rs
openwiki/: README.md  architecture.md  cli-usage.md  contributor-workflow.md  provider-auth.md  release-update.md  sessions-storage.md  tools.md  tui-behavior.md
scripts/: change-scope-tests.sh  change-scope.sh  check-primary-fresh.sh  check-repo-guidance.sh  gate.sh  gen-hero-svg.py  install-hooks.sh  iris-dev.sh  measure-residual-tool-mass.py  openwiki-codex-update.sh  openwiki-init.sh  openwiki-run.sh  openwiki-update.sh  pr-merge.sh  record-demo.sh  repo-guidance-tests.sh  sync-primary-tests.sh  sync-primary.sh  tui-live.sh  validate-dist.sh  worktree-cleanup.sh  worktree-create-tests.sh  worktree-create.sh  worktree-preflight.sh
showcase/: README.md  boot-frame.ansi  settings-faceplate.ansi  settled.ansi
src/: approval.rs  bench_tokens_per_task.rs  cli.rs  compaction_bench.rs  compaction_live_bench.rs  config.rs  display_path.rs  errors.rs  goal.rs  goal_tests.rs  handles.rs  harness.rs  lib.rs  main.rs  metrics.rs  nexus.rs  nexus_tests.rs  paths.rs  print.rs  process_group.rs  selfupdate.rs  session.rs  signals.rs  structured_summary_probe.rs  telemetry.rs  tool_display.rs  tool_summary.rs  tools.rs  transcript.rs  wayland.rs
tests/: btrfs_timing.rs
(+396 files in other folders)
