[package]
name = "iris-agent"
version = "0.1.0"
edition = "2024"
autobins = false

[[bin]]
name = "iris"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
# Async runtime primitives for the agent loop. tokio (current-thread runtime +
# spawn_blocking for the blocking provider), tokio-util for `CancellationToken`,
# and futures for `Stream`/local boxed futures. Adopted from Codex's
# runtime mechanics; no bespoke runtime is introduced.
futures = "0.3"
tokio = { version = "1", features = ["rt", "macros", "time"] }
tokio-util = "0.7"
# ripgrep as a library: content search without requiring the `rg` binary on
# PATH. `grep` re-exports the matcher/searcher crates; `ignore` provides the
# .gitignore-aware directory walk and glob overrides.
globset = "0.4"
grep = "0.4"
ignore = "0.4"
libc = "0.2.186"
rand = "0.10"
# Terminal UI primitives. Iris owns the terminal surface lifecycle/diff/replay
# in `src/ui/terminal_surface.rs`; Ratatui supplies stable text/style/layout
# primitives and re-exports Crossterm for raw mode, key/resize/paste events, and
# cursor visibility. Production TUI code does not use Ratatui `Terminal`, an
# alternate screen, or an inline viewport lifecycle.
ratatui = "0.30"
ansi-to-tui = "8.0.1"
# Markdown parser for assistant text rendering. pulldown-cmark is the canonical
# CommonMark pull parser (the same one Codex CLI uses); Iris maps its event
# stream to a small set of ratatui Lines/Spans. Adopted instead of hand-rolling
# a markdown tokenizer, which is an error-prone parser path the reuse ladder
# forbids. default-features off drops the unused HTML push/CLI features.
pulldown-cmark = { version = "0.13", default-features = false }
# Multiline editor widget (undo/redo, kill-ring/yank, word-nav) over the same
# ratatui buffer. default-features off drops its crossterm/termion/termwiz input
# backends and the regex search feature: Iris drives edits from its own keymap
# via the widget's direct methods, so only the editor model + Widget impl are
# used. Adopted instead of hand-rolling an undo stack + kill-ring.
ratatui-textarea = { version = "0.9", default-features = false }
# Display-width measurement for transcript word-wrapping and editor-cursor math.
# unicode-width is the canonical implementation (already in the tree via
# ratatui); used instead of counting chars, which is wrong for CJK/emoji.
unicode-width = "0.2"
# Grapheme-cluster segmentation for the unified text engine (src/ui/textengine.rs).
# The Rust stdlib has no grapheme iterator, and unicode-width alone cannot keep
# emoji ZWJ/VS16/flag clusters intact across wrap/truncate boundaries (it only
# measures width once the whole cluster is known). unicode-segmentation is the
# canonical UAX#29 implementation and is already in the build graph transitively
# via ratatui-core, so this is a direct-dep promotion, not a new crate.
unicode-segmentation = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
similar = "3.1.1"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Kernel sandbox for the bash tool. Used instead of hand-rolling Landlock LSM
# syscalls + struct ABI by hand, which is an error-prone security-critical path.
# Linux-only: the crate uses Linux syscalls (landlock_*, prctl, O_PATH) that do
# not exist on macOS/Windows, so it is gated to Linux targets. sandbox.rs guards
# every `landlock::` use behind `#[cfg(target_os = "linux")]`.
[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4.5"
