[package]
name = "iris-agent"
version = "0.1.0"
edition = "2024"
autobins = false
build = "build.rs"
license = "MIT"
repository = "https://github.com/5omeOtherGuy/iris-agent"
description = "A fast, token-efficient coding agent for the terminal."

[[bin]]
name = "iris"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
# Async runtime primitives for the agent loop. tokio (current-thread runtime +
# spawn_blocking for the blocking provider), tokio-util for `CancellationToken`,
# and futures for `Stream`/local boxed futures. Adopted from Codex's
# runtime mechanics; no bespoke runtime is introduced.
futures = "0.3"
tokio = { version = "1", features = ["rt", "macros", "time"] }
tokio-util = "0.7"
# ripgrep as a library: content search without requiring the `rg` binary on
# PATH. `grep` re-exports the matcher/searcher crates; `ignore` provides the
# .gitignore-aware directory walk and glob overrides.
globset = "0.4"
grep = "0.4"
ignore = "0.4"
libc = "0.2.186"
rand = "0.10"
# Terminal UI primitives. Iris owns the terminal surface lifecycle/diff/replay
# in `src/ui/terminal_surface.rs`; Ratatui supplies stable text/style/layout
# primitives and re-exports Crossterm for raw mode, key/resize/paste events, and
# cursor visibility. Production TUI code does not use Ratatui `Terminal`, an
# alternate screen, or an inline viewport lifecycle.
ratatui = "0.30"
ansi-to-tui = "8.0.1"
# Markdown parser for assistant text rendering. pulldown-cmark is the canonical
# CommonMark pull parser (the same one Codex CLI uses); Iris maps its event
# stream to a small set of ratatui Lines/Spans. Adopted instead of hand-rolling
# a markdown tokenizer, which is an error-prone parser path the reuse ladder
# forbids. default-features off drops the unused HTML push/CLI features.
pulldown-cmark = { version = "0.13", default-features = false }
# Multiline editor widget (undo/redo, kill-ring/yank, word-nav) over the same
# ratatui buffer. default-features off drops its crossterm/termion/termwiz input
# backends and the regex search feature: Iris drives edits from its own keymap
# via the widget's direct methods, so only the editor model + Widget impl are
# used. Adopted instead of hand-rolling an undo stack + kill-ring.
ratatui-textarea = { version = "0.9", default-features = false }
# Display-width measurement for transcript word-wrapping and editor-cursor math.
# unicode-width is the canonical implementation (already in the tree via
# ratatui); used instead of counting chars, which is wrong for CJK/emoji.
unicode-width = "0.2"
# Grapheme-cluster segmentation for the unified text engine (src/ui/textengine.rs).
# The Rust stdlib has no grapheme iterator, and unicode-width alone cannot keep
# emoji ZWJ/VS16/flag clusters intact across wrap/truncate boundaries (it only
# measures width once the whole cluster is known). unicode-segmentation is the
# canonical UAX#29 implementation and is already in the build graph transitively
# via ratatui-core, so this is a direct-dep promotion, not a new crate.
unicode-segmentation = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
similar = "3.1.1"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Binary self-update (feature `self-update`, off by default). Enabled only for
# prebuilt release binaries built by cargo-dist so that `iris update` downloads
# and atomically replaces the running binary without a Rust toolchain. Source
# builds leave the feature off and `iris update` falls back to `cargo install`.
# Each crate is single-purpose and canonical: `self-replace` performs the
# platform-correct atomic replacement of the running executable (error-prone to
# hand-roll on Windows/Unix); `flate2` + `tar` decompress the `.tar.gz` release
# archive. Download and SHA-256 verification reuse the existing `reqwest` and
# `sha2` dependencies, so no do-everything updater crate is pulled in.
self-replace = { version = "1", optional = true }
flate2 = { version = "1", optional = true }
tar = { version = "0.4", optional = true }

[features]
default = []
# Compile the network download / checksum-verify / atomic-replace self-update
# path. cargo-dist builds release binaries with this feature enabled (see
# `[workspace.metadata.dist] features`).
self-update = ["dep:self-replace", "dep:flate2", "dep:tar"]

# Kernel sandbox for the bash tool. Used instead of hand-rolling Landlock LSM
# syscalls + struct ABI by hand, which is an error-prone security-critical path.
# Linux-only: the crate uses Linux syscalls (landlock_*, prctl, O_PATH) that do
# not exist on macOS/Windows, so it is gated to Linux targets. sandbox.rs guards
# every `landlock::` use behind `#[cfg(target_os = "linux")]`.
[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4.5"

# cargo-dist (dist) configuration. Drives prebuilt cross-platform release
# artifacts (tarballs + SHA-256 checksums), a `curl | sh` shell installer, and
# a crates.io publish, integrated with the existing release-plz flow. The CI
# workflow at `.github/workflows/release.yml` is generated by `dist generate`;
# regenerate it after changing this block. Release binaries are built with the
# `self-update` feature so `iris update` can self-replace.
[workspace.metadata.dist]
cargo-dist-version = "0.28.0"
ci = "github"
installers = ["shell"]
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
]
# Emit a SHA-256 sidecar per artifact; the install script and `iris update`
# both verify it before installing.
checksum = "sha256"
# Use gzip tarballs on unix so the installer and self-update path decompress
# with ubiquitous tooling (no xz dependency).
unix-archive = ".tar.gz"
windows-archive = ".zip"
features = ["self-update"]
install-path = "CARGO_HOME"
# Let release-plz own tag creation and version bumps; dist only builds/uploads.
publish-jobs = []
pr-run-mode = "plan"
