[workspace]
members = ["iris-bench", "crates/iris-subagent-runtime"]
resolver = "3"

[package]
name = "iris-agent"
version = "0.3.8"
edition = "2024"
autobins = false
build = "build.rs"
license = "MIT"
repository = "https://github.com/5omeOtherGuy/iris-agent"
description = "A fast, token-efficient coding agent for the terminal."

# Library target: the full agent + the benchmark `harness` façade the
# `iris-bench` crate consumes. The bin below is a thin shim over `run_cli`.
[lib]
name = "iris_agent"
path = "src/lib.rs"

[[bin]]
name = "iris"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
# Async runtime primitives for the agent loop. tokio (current-thread runtime +
# spawn_blocking for the blocking provider), tokio-util for `CancellationToken`,
# and futures for `Stream`/local boxed futures. Adopted from Codex's
# runtime mechanics; no bespoke runtime is introduced.
futures = "0.3"
tokio = { version = "1", features = ["rt", "macros", "time", "net", "sync"] }
tokio-util = "0.7"
tokio-tungstenite = { version = "0.30", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
# ripgrep as a library: content search without requiring the `rg` binary on
# PATH. `grep` re-exports the matcher/searcher crates; `ignore` provides the
# .gitignore-aware directory walk and glob overrides.
globset = "0.4"
grep = "0.4"
ignore = "0.4"
iris-subagent-runtime = { path = "crates/iris-subagent-runtime" }
libc = "0.2.186"
rand = "0.10"
# Terminal UI primitives. Ratatui supplies stable text/style/layout primitives
# and re-exports Crossterm for raw mode, key/resize/paste events, and cursor
# visibility. The alt-screen pager mode drives a Ratatui `Terminal` with cell
# diffing (ADR-0029); the inline fallback surface stays Iris-owned in
# `src/ui/terminal_surface.rs` (ADR-0006). Adoption boundary: ADR-0033.
ratatui = "0.30"
ansi-to-tui = "8.0.1"
# Markdown parser for assistant text rendering. pulldown-cmark is the canonical
# CommonMark pull parser (the same one Codex CLI uses); Iris maps its event
# stream to a small set of ratatui Lines/Spans. Adopted instead of hand-rolling
# a markdown tokenizer, which is an error-prone parser path the reuse ladder
# forbids. default-features off drops the unused HTML push/CLI features.
pulldown-cmark = { version = "0.13", default-features = false }
# Syntax highlighting for fenced code blocks via the markdown `HighlightFn` seam
# (ADR-0033, #324). default-features off drops the onig C dependency; we enable
# `regex-fancy` (pure-Rust fancy-regex) and `default-syntaxes` (the bundled
# Sublime syntax dump + parsing). We deliberately do NOT enable `default-themes`,
# `html`, `plist-load`, or `yaml-load`: scopes are mapped to the Iris palette in
# `src/ui/highlight.rs`, so no stock theme/plist machinery is pulled in.
syntect = { version = "5.3", default-features = false, features = ["default-syntaxes", "regex-fancy"] }
# Python heredoc display formatting. Ruff is the established Rust-native Python
# formatter; using its library keeps rendering deterministic and avoids spawning
# an optional host binary. Invalid/incomplete payloads fall back verbatim.
ruff_python_formatter = "0.0.4"
# Multiline editor widget (undo/redo, kill-ring/yank, word-nav) over the same
# ratatui buffer. default-features off drops its crossterm/termion/termwiz input
# backends and the regex search feature: Iris drives edits from its own keymap
# via the widget's direct methods, so only the editor model + Widget impl are
# used. Adopted instead of hand-rolling an undo stack + kill-ring.
ratatui-textarea = { version = "0.9", default-features = false }
# Display-width measurement for transcript word-wrapping and editor-cursor math.
# unicode-width is the canonical implementation (already in the tree via
# ratatui); used instead of counting chars, which is wrong for CJK/emoji.
unicode-width = "0.2"
# Grapheme-cluster segmentation for the unified text engine (src/ui/textengine.rs).
# The Rust stdlib has no grapheme iterator, and unicode-width alone cannot keep
# emoji ZWJ/VS16/flag clusters intact across wrap/truncate boundaries (it only
# measures width once the whole cluster is known). unicode-segmentation is the
# canonical UAX#29 implementation and is already in the build graph transitively
# via ratatui-core, so this is a direct-dep promotion, not a new crate.
unicode-segmentation = "1"
# `http2` enables ALPN-negotiated HTTP/2 to api.anthropic.com / OpenAI: one
# multiplexed connection per host, kept warm between turns by TCP keepalive,
# so a turn does not pay a fresh TCP+TLS handshake after idle gaps.
# Bash output-filter engine (ADR-0037): `regex` compiles the declarative
# filter pipeline's match/strip/keep/replace patterns (already in the build
# graph transitively via the `grep` crates -- this is a direct-dep promotion);
# `toml` parses the embedded filter data files vendored from RTK. Both are the
# canonical crates for their job; hand-rolling either is forbidden by the
# reuse ladder.
regex = "1"
toml = "1.1"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls", "http2", "gzip", "stream"], default-features = false }
# Web tools (web_search / read_web_page). `url` parses and canonicalizes
# user/model-supplied URLs (punycode/IDNA, host normalization) for the SSRF
# policy gate -- hand-rolling URL/host parsing is forbidden by the reuse ladder
# (already in-tree via reqwest; direct-dep promotion). `encoding_rs` does
# bounded-buffer charset decoding of fetched bodies without reading the whole
# body first (reqwest's `text_with_charset` would bypass the byte cap; also an
# in-tree direct-dep promotion). `dom_smoothie` is the maintained readability.js
# port for article extraction; `htmd` converts the extracted HTML to Markdown
# (tables included); `dom_query` is the CSS-selector engine (dom_smoothie's own
# base) reused for DuckDuckGo result-row parsing so no second HTML parser stack
# is pulled in. All MIT/Apache-2.0/ISC (deny.toml allow-list).
url = "2.5"
encoding_rs = "0.8"
dom_smoothie = "0.18"
htmd = "0.5"
dom_query = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Semantic-version comparison for `iris update`: only self-replace when the
# latest release is strictly newer than the running binary, and never downgrade.
# semver is the canonical crate; hand-rolling version parsing/ordering (with
# prerelease precedence) is error-prone and forbidden by the reuse ladder.
semver = "1"
# Codex-compatible SKILL.md and agents/openai.yaml parsing. The original
# serde_yaml crate is archived; serde_yaml_ng is its maintained drop-in fork.
serde_yaml_ng = "0.10"
sha2 = "0.11"
similar = "3.1.1"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Binary self-update (feature `self-update`, off by default). Enabled only for
# prebuilt release binaries built by cargo-dist so that `iris update` downloads
# and atomically replaces the running binary without a Rust toolchain. Source
# builds leave the feature off and `iris update` falls back to `cargo install`.
# Each crate is single-purpose and canonical: `self-replace` performs the
# platform-correct atomic replacement of the running executable (error-prone to
# hand-roll on Windows/Unix); `flate2` + `tar` decompress the `.tar.gz` release
# archive. Download and SHA-256 verification reuse the existing `reqwest` and
# `sha2` dependencies, so no do-everything updater crate is pulled in.
self-replace = { version = "1", optional = true }
flate2 = { version = "1", optional = true }
tar = { version = "0.4", optional = true }

[features]
default = []
# Compile the network download / checksum-verify / atomic-replace self-update
# path. cargo-dist builds release binaries with this feature enabled (see
# `[workspace.metadata.dist] features`).
self-update = ["dep:self-replace", "dep:flate2", "dep:tar"]

# Kernel sandbox for the bash tool. Used instead of hand-rolling Landlock LSM
# syscalls + struct ABI by hand, which is an error-prone security-critical path.
# Linux-only: the crate uses Linux syscalls (landlock_*, prctl, O_PATH) that do
# not exist on macOS/Windows, so it is gated to Linux targets. sandbox.rs guards
# every `landlock::` use behind `#[cfg(target_os = "linux")]`.
[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4.5"

# cargo-dist (dist) configuration. Drives prebuilt cross-platform release
# artifacts (tarballs + SHA-256 checksums), a `curl | sh` shell installer, and
# a crates.io publish, integrated with the existing release-plz flow. The CI
# workflow at `.github/workflows/release.yml` is generated by `dist generate`;
# regenerate it after changing this block. Release binaries are built with the
# `self-update` feature and the release pipeline sets `IRIS_DIST=1` (build.rs
# emits the `iris_dist` cfg) so `iris update` can self-replace; source builds
# lack the marker and fall back to `cargo install`.
[workspace.metadata.dist]
cargo-dist-version = "0.28.0"
ci = "github"
installers = ["shell"]
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
]
# Emit a SHA-256 sidecar per artifact; the install script and `iris update`
# both verify it before installing.
checksum = "sha256"
# Use gzip tarballs on unix so the installer and self-update path decompress
# with ubiquitous tooling (no xz dependency).
unix-archive = ".tar.gz"
windows-archive = ".zip"
features = ["self-update"]
install-path = "CARGO_HOME"
# Let release-plz own tag creation and version bumps; dist only builds/uploads.
publish-jobs = []
pr-run-mode = "plan"
# CI is hand-maintained (see .github/workflows/release.yml header); tell dist not
# to treat the divergence from `dist generate` as an error.
allow-dirty = ["ci"]

# Optimized release profile for source builds (`cargo install`, `cargo build
# --release`): thin LTO plus a single codegen unit lets LLVM inline and
# dead-code-eliminate across crate boundaries, which the render/wrap/parse hot
# paths benefit from. Behavior-identical; only build time goes up. The `dist`
# profile below inherits this, so prebuilt binaries get the same baseline.
[profile.release]
lto = "thin"
codegen-units = 1

# Build profile cargo-dist (dist) uses for release artifacts. cargo-dist builds
# with `--profile dist`; without this section `dist build` fails with
# "profile `dist` is not defined". Inherits the release profile and enables thin
# LTO, matching cargo-dist's `dist init` default.
[profile.dist]
inherits = "release"
lto = "thin"
