[package]
name = "iris-subagent-runtime"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "MIT OR Apache-2.0"
repository = "https://github.com/5omeOtherGuy/iris-agent"
description = "Host-neutral worker scheduling and isolated worktree runtime"
readme = "README.md"
keywords = ["agents", "scheduler", "worktree", "runtime"]
categories = ["asynchronous", "development-tools"]
publish = false

[dependencies]
futures = "0.3"
rand = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
tokio-util = "0.7"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
